# xali-pytools

./: .gitignore  README.md  generate_pdf.py  pyproject.toml
data/: .gitignore  Negro_Mag_Fault_vertices.vtp  Opal_Mound_Fault_vertices.vtp  convert.py  dem.vtp
data/models/: chimney.ts  gom.ts  oseberg.ts  planar.ts  sphere.ts  tindel.ts
docs/: core.md  geophysics.md  io.md  math.md  plots.md  utils.md
src/xali_tools/: __init__.py
src/xali_tools/core/: __init__.py  attribute.py  attribute_manager.py  container.py  decomposer.py  math.py  serie.py
src/xali_tools/geom/: __init__.py  local_axes.py  surface_data.py
src/xali_tools/geophysics/: __init__.py  inversion.py  joint.py  stress_data.py  stress_inversion_model.py  stress_tensor.py  stress_utils.py  stylolite.py
src/xali_tools/io/: __init__.py  surface_data.py  surface_loader.py  tsurf_filter.py  vtp_filter.py
src/xali_tools/math/: __init__.py  displacement.py  stress.py
src/xali_tools/plots/: __init__.py  isocontours.py  rose_diagram.py  stereonet.py  streamlines.py  surface3d.py  vectorfield.py
tests/: .gitignore  displacement.py  geophysics_inversion.py  gocad_tsurf.py  isocontours.py  load_surfaces.py  slip_envelope.py  streamlines.py  stress.py  surface3d.py  surface3d_gui.py  surfaces.ts  test_attribute.py  test_decomposer.py  test_get_save_tsurf.py  test_local_axes.py  test_rose_diagram.py  test_serie.py  test_slip_envelope.py  test_stereonet.py  test_tsurf_esizes.py  test_vtp_filter.py  test_weighted_sum.py  tsurf_esizes.py  two-triangles.gcd  vectorfield.py
(+8 files in other folders)
