[project]
name = "xali-tools"
version = "0.1.0"
description = "My personal utility scripts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
