[project]
name = "xali-tools"
version = "0.1.0"
description = "My personal utility scripts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "numpy>=1.23.5,<2.3.0",
]

[project.optional-dependencies]
mesh = ["trimesh"]
all = ["trimesh", "matplotlib"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
